add html template

--- a/src/pages/template/template.html
+++ b/src/pages/template/template.html
@@ -4,12 +4,27 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Smart Locker Solutions - Template</title>
+    <title>Template - Smart Locker Solutions</title>
     <link rel="stylesheet" href="../../styles/reset.css" />
     <link rel="stylesheet" href="../../styles/global.css" />
 </head>
 
 <body>
+    <div id="container">
+        <header>
+            <div id="logo"><img src="../../assets/logo.png" alt="Logo"></div>
+            <nav id="main_nav">
+                <a href="#">Home</a>
+                <a href="#">Nossos Produtos</a>
+                <a href="#">Quem Somos</a>
+            </nav>
+            <a id="login_btn" href="#">Login</a>
+        </header>
+        <main id="content">
+
+        </main>
+        <footer>&copy caçadores de código 2023</footer>
+    </div>
 
 </body>
 
