--- a/src/pages/template/template.html
+++ b/src/pages/template/template.html
@@ -14,11 +14,11 @@
         <header>
             <div id="logo"><img src="../../assets/logo.png" alt="Logo"></div>
             <nav id="main_nav">
-                <a href="#">Home</a>
-                <a href="#">Nossos Produtos</a>
-                <a href="#">Quem Somos</a>
+                <a href="../index/index.html">Home</a>
+                <a href="../produtos/produtos.html">Nossos Produtos</a>
+                <a href="../sobre/sobre.html">Quem Somos</a>
             </nav>
-            <a id="login_btn" href="#">Login</a>
+            <a id="login_btn" href="../login/login.html">Login</a>
         </header>
         <main id="content">
 
