--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -22,14 +22,14 @@ header {
 
 /* LOGO */
 #logo {
-  width: 190px;
-  height: 190px;
+  width: 220px;
+  height: 120px;
 }
 
 #logo img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* NAV */
