--- a/src/styles/editar-cadastro.css
+++ b/src/styles/editar-cadastro.css
@@ -1,3 +1,11 @@
+#dropdown-menu {
+  padding: 0.4rem 2rem;
+  border: solid 1px;
+  font-family: inherit;
+  font-size: 0.9rem;
+}
+
+
 #content {
   display: flex;
   flex-direction: column;
