--- a/src/styles/dashboard-editar.css
+++ b/src/styles/dashboard-editar.css
@@ -1,3 +1,41 @@
+#content {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  text-align: center;
+  align-items: center;
+  margin: 16px;
+}
+
+#editar_clientes_cabecalho {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  margin: 8px 16px;
+}
+
+.editar_clientes_cabecalho_h3 {
+  margin: 0px;
+  padding: 8px;
+  font-size: 26px;
+}
+
+#editar_produtos_cabecalho {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8px;
+  margin: 8px 16px;
+}
+
+.editar_produtos_cabecalho_h3 {
+  margin: 0px;
+  padding: 8px;
+  font-size: 26px;
+}
+
+
 .formulario {
   display: flex;
   flex-direction: column;
@@ -30,12 +68,17 @@
   display: flex;
   align-items: center;
   padding: 8px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .formulario_acoes p {
   font-size: 13px;
   width: 260px;
+}
+
+.inpt_descreva_pedido{
+  height: 150px;
+  line-height: normal;
 }
 
 .botao_primario {
