--- a/src/styles/produtos.css
+++ b/src/styles/produtos.css
@@ -4,24 +4,34 @@
     flex-direction: column;
     text-align: center;
     align-items: center;
-    margin: 16px;
+    margin: 0 auto;
+}
+
+
+#main_nossos_produtos{
+
+    align-items: center;
+    display: contents;
+}
+#nossos_produtos_cabeçalho{
+
+    padding: 15px;
 }
 
 
 figure {
-
     width: 500px;
     height: auto;
 }
 
 figure img{
-
-    width: 450px;
+   
+    width: 500px;
     height: auto;
 }
 
 #nossos_produtos_info{
-
+    text-align: center;
     display: flex;
     margin: 0 auto;
 }
