--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,114 +1,65 @@
-#content {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: 16px;
+/* ------------ HERO ------------ */
+#hero {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(8, 1fr);
+  height: 60vh;
 }
 
-#main_home{
+#titulo {
+  padding: 1rem;
+  max-width: 500px;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 
-    display: contents;
+  grid-column-start: 1;
+  grid-column-end: 8;
+  grid-row-start: 1;
+  grid-row-end: 8;
 }
 
-#home_cabeçalho{
-    padding: 15px;
-}
-#home_info{
-
-    margin: 5px auto;
-    display: flex;
-    align-items: center;
+#titulo h2 {
+  font-size: 2rem;
 }
 
-#home_habilidades_central{
-    font-size: 17px;
-    display: flex;
-    align-items: center;
-    margin: 0 auto;
-}
-.home_habilidades{
-    
-    width: 400px;
-    height: auto;
-
+#titulo div {
+  font-size: 0.9rem;
 }
 
-figure {
-
-    width: 400px;
-    height: auto;
+#icone1 {
+  max-width: 380px;
+  grid-column-start: 6;
+  grid-column-end: 12;
+  grid-row-start: 1;
+  grid-row-end: 8;
 }
 
-figure img {
-
-    width: 400px;
-    height: auto;
+#icone2 {
+  max-width: 380px;
+  grid-column-start: 11;
+  grid-column-end: 17;
+  grid-row-start: 2;
+  grid-row-end: 8;
 }
 
-#home_icons {
-    margin: 0 auto;
-    margin-left: 110px;
-    display: flex;
-    align-items: center;
-    padding: 50px;
-   
+/* ------------ PARCEIROS ------------ */
 
+#parceiros {
+  margin: 40px 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
-#home_icons img{
-
-    width: 50px;
+#parceiros h3 {
+  margin: 50px 0;
+  font-size: 2rem;
+  text-align: center;
 }
 
-.home_img_pessoas{
- margin-right: 50px;
-}
-
-.home_img_seta{
-    margin-left: 50px;
-}
-
-.home_img_monitorar{
-
-    margin-right: 40px;
-    margin-left: 60px;
-}
-
-
-#home_rodape{
-    padding: 10px;
-    place-items: center;
-    place-self: center;
-    margin: 0 auto;
-    
-}
-
-.home_img_parceiros{
-    
-    padding: 16px;
-    width: 1000px;
-    height: auto;
-}
-
-.home_img_parceiros img{
-
-    width: 600px;
-    height: auto;
-}
-
-
-.home_cadastro_button button{
-    padding: 10px 24px;
-    text-decoration: none;
-    text-align: center;
-    font-size: 13px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-button:hover {
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+#parceiros img {
+  object-fit: cover;
+  height: 100%;
+  width: 100%;
 }
