--- a/src/styles/produtos.css
+++ b/src/styles/produtos.css
@@ -1,82 +1,38 @@
 #content {
-    display: flex;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: 0 auto;
+  padding: 1rem;
+  margin: 1rem;
+  text-align: center;
+  justify-content: start;
+  align-items: center;
 }
 
-
-#main_nossos_produtos{
-
-    align-items: center;
-    display: contents;
-}
-#nossos_produtos_cabeçalho{
-
-    padding: 15px;
+#titulo {
+  font-size: 2rem;
+  max-width: 700px;
 }
 
-
-figure {
-    width: 500px;
-    height: auto;
+#locker_image {
+  margin: -80px 0;
+  width: 90%;
+  height: 90%;
 }
 
-figure img{
-   
-    width: 500px;
-    height: auto;
+#locker_image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
 }
 
-#nossos_produtos_info{
-    text-align: center;
-    display: flex;
-    margin: 0 auto;
-}
-.nossos_produtos_G p{
-
-    font-size: 12px;
-    margin-right: 20px;
+.descricao {
+  display: grid;
+  gap: 1.2rem;
 }
 
-.nossos_produtos_M p{
-
-    font-size: 12px;
-    margin-right: 20px;
+#subtitulo {
+  margin-top: 70px;
+  font-size: 1.4rem;
 }
 
-.nossos_produtos_P p{
-
-    font-size: 12px;
+.btn_primario {
+  margin-bottom: 70px;
 }
-
-#nossos_produtos_rodape{
-
-    padding: 15px;
-    place-items: center;
-    place-self: center;
-    margin: 0 auto;
-}
-
-.nossos_produtos_text h4{
-
-    margin: 10px;
-}
-.nossos_produtos_button button{
-
-    padding: 10px 24px;
-    text-decoration: none;
-    text-align: center;
-    font-size: 13px;
-    cursor: pointer;
-    border-radius: 5px;
-}
-
-button:hover {
-    -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
-}
-
