--- a/src/pages/template/template.html
+++ b/src/pages/template/template.html
@@ -4,28 +4,34 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Template - Smart Locker Solutions</title>
+    <title>Home - SmartLock Solutions</title>
     <link rel="stylesheet" href="../../styles/reset.css" />
     <link rel="stylesheet" href="../../styles/global.css" />
+    <link rel="stylesheet" href="../../styles/home.css" />
 </head>
 
 <body>
-    <div id="container">
-        <header>
-            <div id="logo"><img src="../../assets/logo.png" alt="Logo"></div>
-            <nav id="main_nav">
-                <a href="../index/index.html">Home</a>
-                <a href="../produtos/produtos.html">Nossos Produtos</a>
-                <a href="../sobre/sobre.html">Quem Somos</a>
-            </nav>
-            <a id="login_btn" href="../login/login.html">Login</a>
-        </header>
-        <main id="content">
+    <header>
+        <div id="logo"><img src="../../assets/logo1.png" alt="Logo" /></div>
+        <nav id="main_nav">
+            <a href="../index/index.html">Home</a>
+            <a href="../produtos/produtos.html">Nossos Produtos</a>
+            <a href="../sobre/sobre.html">Quem Somos</a>
+            <button class="btn_secundario">Login</button>
+            <select id="dropdown-menu">
+                <option value="sair">Nome</option>
+                <option value="admin">Editar perfil</option>
+                <option value="sair">Sair</option>
+            </select>
+        </nav>
 
-        </main>
-        <footer>&copy caçadores de código 2023</footer>
-    </div>
+    </header>
 
+    <main id="content">
+
+    </main>
+
+    <footer>&copy caçadores de código 2023</footer>
 </body>
 
 </html>
