ajuste na width dos campos

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -117,7 +117,7 @@ footer {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
-/* BUTTONS */
+/* FORM */
 form {
   display: flex;
   flex-direction: column;
@@ -131,10 +131,12 @@ form {
   flex-direction: column;
   text-align: left;
   padding: 8px;
+  width: 100%;
 }
 
 .campo input {
   padding: 0.6rem;
+  width: 100%;
 }
 
 .campo label {
