--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,10 @@ body {
   font-family: "Inter", sans-serif;
   color: #2f2e2e;
   background: #e3e3e3;
+
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /* HEADER */
@@ -29,6 +33,7 @@ header {
 #content {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 /* NAV */
