--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,6 +51,7 @@ header {
 /* MENU */
 
 #dropdown-menu {
+  display: none;
   padding: 0.4rem 2rem;
   border: solid 1px;
   font-family: inherit;
@@ -176,6 +177,7 @@ form {
 
   gap: 1rem;
 }
+
 #card:hover {
   box-shadow: 17px 20px 38px -15px rgba(0, 0, 0, 0.3);
 }
