--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -12,10 +12,10 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-
-  grid-column-start: 1;
+  
+  grid-column-start: 2;
   grid-column-end: 8;
-  grid-row-start: 1;
+  grid-row-start: 2;
   grid-row-end: 8;
 }
 
@@ -24,23 +24,51 @@
 }
 
 #titulo div {
-  font-size: 0.9rem;
+  font-size: 1.0rem;
 }
 
 #icone1 {
   max-width: 380px;
-  grid-column-start: 6;
-  grid-column-end: 12;
+  grid-column-start: 8;
+  grid-column-end: 11;
   grid-row-start: 1;
   grid-row-end: 8;
+  /* margin-top: -60px; */
 }
 
 #icone2 {
   max-width: 380px;
-  grid-column-start: 11;
-  grid-column-end: 17;
-  grid-row-start: 2;
+  grid-column-start: 7;
+  grid-column-end: 11;
+  grid-row-start: 5;
   grid-row-end: 8;
+  /* margin-top: -50px; */
+}
+
+#icone3 {
+  max-width: 380px;
+  grid-column-start: 10;
+  grid-column-end: 14;
+  grid-row-start: 3;
+  grid-row-end: 8;
+  /* margin-top: -30px; */
+}
+
+#icone4 {
+  max-width: 380px;
+  grid-column-start: 12;
+  grid-column-end: 17;
+  grid-row-start: 1;
+  grid-row-end: 8;
+  /* margin-top: -60px; */
+}
+#icone5 {
+  max-width: 380px;
+  grid-column-start: 13;
+  grid-column-end: 17;
+  grid-row-start: 5;
+  grid-row-end: 8;
+  /* margin-top: -40px; */
 }
 
 /* ------------ PARCEIROS ------------ */
@@ -49,17 +77,54 @@
   margin: 40px 0;
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 1rem;
 }
 
 #parceiros h3 {
-  margin: 50px 0;
+  margin-top: 100px;
+  margin-bottom: 20px;
   font-size: 2rem;
   text-align: center;
 }
 
 #parceiros img {
-  object-fit: cover;
-  height: 100%;
+  object-fit: contain;
+  height: 60%;
+  width: 60%;
+}
+
+
+/* ------------ CARD ------------ */
+#card_container {
   width: 100%;
+  height: 100%;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 100px;
+  margin-top: 250px;
+}
+
+.card {
+  width: 220px;
+  height: 284px;
+  padding: 1rem;
+  border-radius: 30px;
+  background: #e0e0e0;
+  box-shadow: 15px 15px 30px #bebebe, -15px -15px 30px #ffffff;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  gap: 1rem;
+}
+
+#card:hover {
+  box-shadow: 17px 20px 38px -15px rgba(0, 0, 0, 0.3);
 }
