--- a/src/styles/produtos.css
+++ b/src/styles/produtos.css
@@ -7,27 +7,42 @@
 }
 
 #locker_image {
-  margin: -80px 0;
+  
   width: 90%;
   height: 90%;
 }
 
 #locker_image img {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
+  margin-top: 36px;
   object-fit: contain;
 }
 
 .descricao {
   display: grid;
-  gap: 1.2rem;
+  gap: 1.2rem;  
 }
 
 #subtitulo {
   margin-top: 70px;
   font-size: 1.4rem;
+  margin-bottom: 20px;
+}
+
+
+#card_container {
+  margin-top: 10px;
 }
 
 .btn_primario {
-  margin-bottom: 70px;
+  padding: 0.8rem 3.5rem;
+  font-size: 16px;
+  max-width: 215px;
+}
+
+.btn_secundario {
+  padding: 0.8rem 3.5rem;
+  font-size: 16px;
+  max-width: 190px;
 }
